force-app/main/default/objects/Features__c/Features__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Opportunities and Feature Requests</description>
    <label>Feature</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Features Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>