force-app/main/default/objects/Features__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>CURRENCYRATE(&quot;USD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>