force-app/main/default/objects/Features__c/fields/Feature_Request__c.field-meta.xml
<CustomField>
    <fullName>Feature_Request__c</fullName>
    <description>Feature Request related to the opportunity.</description>
    <label>Feature Request</label>
    <referenceTo>Feature_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Feature_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>