force-app/main/default/objects/Features__c/fields/test_amop0unt__c.field-meta.xml
<CustomField>
    <fullName>test_amop0unt__c</fullName>
    <formula>Opportunity__r.Weighted_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test amop0unt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>